--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Potential medicines to treat COVID-19 - 15 July 2020.PDF
 /old_input
 /bundle
+/202103300945input/resources/practitioner
+/202103300945input
